Version 1.0-svn

Issues fixed:
#71: grossd dies under Linux
#72: freebsd port broken

Version 1.0.1

* Two new configuration options: postfix_response_grey and
  postfix_response_block. Now it's possible to configure
  responses grossd sends in reply to Postfix policy delegation
  client.
* Now grossd allows only the configured sync_peer to connect
  to sync server port.
* When grey_threshold = 0 is set grossd defaults to greylisting.
  Now it's possible to combine traditional greylisting with 
  blocking based on check results.

Issues fixed:
#65: Version number to log (RFE)
#66: Compiler warnings on with 1.0.0
#67: Setting grey_threshold = 0 is not intuitive
#68: grossd should accept sync connections only from the configured sync_peer
#69: Implement postfix_response_grey and postfix_response_block (RFE)
#70: Busyloop if no access to configured statefile 

Version 1.0.0

* Prevent grossd from running as root (euid == 0). You may 
  have to modify configuration and state file ownerships
  and/or permissions. Grossd tries to setuid() and setgid()
  to nobody if started by root.
* New match shortcut logic. Now grossd will shortcut after
  a filter match only if no checks are configured (traditional
  greylister) or block_threshold == 0. 
* A lot of Milter related fixes.

- changed filter_bits default back to 24, as stated in the docs.
- added grey_reason configuration file option. See block_reason.

Issues fixed:
#48: Need man pages
#59: grossd 0.9.3 leaks memory
#60: Grossd should do all dns queries as fully qualified
#61: Space Character in Mail From Crashing Gross
#62: Double free() with milter
#63: Apostrophe chokes old gcc
#64: Garbage in logs with milter api

Version 0.9.3

* HELOified all the rest of the code. There are still no checks
  that use helo info, but now grossd logs it and also gclient 
  can send it to the server. Check INSTALL details about 
  configuring SJSMS to send helo string over to grossd.
* New logfile format! An example log line: 
